fix chart overflow thing

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -35,9 +35,7 @@
 
 .chart_container {
 	flex: 1 1 auto;
-	canvas {
-		max-height: 100%;
-	}
+	height: 20vh;
 }
 
 @media only screen and (max-width: 600px) {
